syntax = "proto3";

service AccountsAndBalancesGrpcService {
  // All unary RPCs.
  rpc CreateAccount(GrpcAccount) returns (GrpcId);
  rpc CreateJournalEntries(GrpcJournalEntryArray) returns (GrpcIdArray);
  rpc GetAccountById(GrpcId) returns (GrpcAccount);
  rpc GetAccountsByExternalId(GrpcId) returns (GrpcAccountArray);
  rpc GetJournalEntriesByAccountId(GrpcId) returns (GrpcJournalEntryArray);
}

// TODO: check types; names starting with Grpc?

// TODO: use strings directly instead of having this type.
message GrpcId {
  string grpcId = 1;
}

message GrpcIdArray {
  repeated GrpcId grpcIdArray = 1;
}

message GrpcAccount {
  string id = 1;
	string externalId = 2;
  GrpcAccountState state = 3;
  GrpcAccountType type = 4;
	string currencyCode = 5;
  uint32 currencyDecimals = 6;
	string creditBalance = 7;
  string debitBalance = 8;
  uint64 timestampLastJournalEntry = 9;
}

enum GrpcAccountState {
  ACTIVE = 0;
  DELETED = 1;
}

enum GrpcAccountType {
  POSITION = 0;
  SETTLEMENT = 1;
  FEE = 2;
}

message GrpcAccountArray {
  repeated GrpcAccount grpcAccountArray = 1;
}

message GrpcJournalEntry {
  string id = 1;
  string externalId = 2;
	string externalCategory = 3;
	string currencyCode = 4;
	uint32 currencyDecimals = 5;
	string amount = 6;
	string creditedAccountId = 7;
	string debitedAccountId = 8;
  uint64 timestamp = 9;
}

message GrpcJournalEntryArray {
  repeated GrpcJournalEntry grpcJournalEntryArray = 1;
}
